--- a/index.html
+++ b/index.html
@@ -1,214 +1,270 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8" />
-    <title>HTML Academy: Глейси</title>
-  </head>
-  <body>
-    <header>
-      <nav>
+
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Глейси</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <a>
+        <img src="img/header/logo.svg" alt="Логотип магазина мороженого Глейси" width="154" height="64">
+      </a>
+      <ul>
+        <li>
+          <a href="catalog.html">Каталог</a>
+        </li>
+        <li>
+          <a href="#">Доставка и оплата</a>
+        </li>
+        <li>
+          <a href="#company">О компании</a>
+        </li>
+      </ul>
+    </nav>
+    <div>
+      <div>
         <a>
-          <img
-            src="img/header/logo.svg"
-            alt="Логотип магазина мороженого Глейси"
-            width="154"
-            height="64"
-          />
+          <form action="https://echo.htmlacademy.ru/courses" method="post">
+            <label for="search">Строка поиска</label>
+            <input type="search" name="search" id="search" placeholder="Что ищем?">
+          </form>
         </a>
-        <ul>
-          <li>
-            <a href="catalog.html">Каталог</a>
-          </li>
-          <li>
-            <a href="">Доставка и оплата</a>
-          </li>
-          <li>
-            <a href="#company">О компании</a>
-          </li>
-        </ul>
-      </nav>
-      <div>
-        <a href="">Поиск</a>
-        <a href="">Вход</a>
-        <a href="">Пусто</a>
       </div>
       <div>
-        <p>С 10 до 20, ежедневно</p>
-        <a href="tel:88124502525">8 812 450-25-25</a>
+        <a href="#">
+          Вход
+          <form action="https://echo.htmlacademy.ru/courses" method="post">
+            <label for="email"></label>
+            <input type="email" id="email" name="email" required>
+            <label for="password"></label>
+            <input type="password" id="password" name="password" placeholder="Пароль">
+            <div class="button">
+              <input type="submit" value="Войти">
+            </div>
+            <a href="#"> Забыли пароль?</a>
+            <a href="#"> Новая регистрация</a>
+          </form>
+        </a>
       </div>
-    </header>
-    <main>
-      <section>
-        <h2>Самое популярное мороженое</h2>
+      <a href="#">Пусто</a>
+    </div>
+    <div>
+      <p>С 10 до 20, ежедневно</p>
+      <a href="tel:88124502525">8 812 450-25-25</a>
+    </div>
+  </header>
+  <main>
+    <section>
+      <h2 class="visually-hidden">Самое популярное мороженое</h2>
+      <div>
         <div>
-          <div>
-            <h3>Крем-брюле и пломбир с малиновым джемом</h3>
-            <a href="#">Давайте оба!</a>
-          </div>
-          <div>
-            <h3>Шоколадный пломбир и лимонный сорбет</h3>
-            <a href="#">Давайте оба!</a>
-          </div>
-          <div>
-            <h3>Пломбир с помадкой и клубничный щербет</h3>
-            <a href="#">Давайте оба!</a>
-          </div>
-          <ul>
-            <li><button>Слайд 1</button></li>
-            <li><button>Слайд 2</button></li>
-            <li><button>Слайд 3</button></li>
-          </ul>
+          <h3>Крем-брюле и пломбир с малиновым джемом</h3>
+          <a href="#">Давайте оба!</a>
         </div>
-      </section>
-      <section>
-        <h3>Малинка даром!</h3>
-        <p>
-          При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ
-          банку маринового варенья бесплатно.
-        </p>
-        <a href="#">Хочу варенье!</a>
-      </section>
-      <section>
-        <h3>Шоколадки даром!</h3>
-        <p>
-          При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей
-          шоколадной присыпки совершенно бесплатно.
-        </p>
-        <a href="#">Хочу шоколадки!</a>
-      </section>
-      <section>
-        <h2>Хиты продаж мороженого</h2>
-        <ul>
-          <li>
-            <div>
-              <p>Хит</p>
-              <p>310 &#8381; <span>/кг</span></p>
-            </div>
-            <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
-            <a href="#">Быстрый просмотр</a>
-          </li>
-          <li>
-            <div>
-              <p>Хит</p>
-              <p>380 &#8381; <span>/кг</span></p>
-            </div>
-            <h3>Сливочно-кофейное с кусочками шоколада</h3>
-            <a href="#">Быстрый просмотр</a>
-          </li>
-          <li>
-            <div>
-              <p>Хит</p>
-              <p>355 &#8381; <span>/кг</span></p>
-            </div>
-            <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
-            <a href="#">Быстрый просмотр</a>
-          </li>
-          <li>
-            <div>
-              <p>Хит</p>
-              <p>415 &#8381; <span>/кг</span></p>
-            </div>
-            <h3>Сливочное крем-брюле с карамельной подливкой</h3>
-            <a href="#">Быстрый просмотр</a>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2 id="company">
-          Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого
-          собственного проиводства на развес
-        </h2>
-        <ul>
-          <li>
-            Все наше мороженое изготавливается на собственном производстве, с
-            использованием современного оборудования и проверенных временем
-            технологий.
-          </li>
-          <li>
-            Закупка ингредиентов производится только у проверенных фермерских
-            хозяйств и компаний, с которыми нас связывает долговременное
-            сотрудничество.
-          </li>
-          <li>
-            Для приготовления мороженого используются настоящие сливки и молоко
-            высочайшего качества. Все дополнительные ингредиенты и добавки
-            произведены из натурального, экологически чистого сырья.
-          </li>
-          <li>
-            Доставка нашего мороженного до заказчиков осуществляется в
-            специальном термопаке, который не дает мороженому растаять в пути и
-            позволяет сохранить превосходный вкус.
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Реклама</h2>
-        <article>
-          <p>Новое в нашем блоге</p>
-          <h3>10 способов сервировки фруктовых щербетов к столу</h3>
-        </article>
-      </section>
-      <section>
-        <h2>Подписка</h2>
-        <p>
-          Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего
-          самого вкусного, что у нас происходит. Обещаем не спамить и не слать
-          всякой ненужной ерунды. Честно =)
-        </p>
-        <form action="">
-          <input type="email" placeholder="email@example.com" />
-          <button type="submit">Отправить</button>
-        </form>
-      </section>
-      <section>
-        <h2>Где мы находимся?</h2>
-        <img src="https://via.placeholder.com/150x100" alt="Месторасположение магазина мороженного" width=" " height="">
         <div>
-          <h2>Форма обратной связи</h2>
-          <p>Адрес главного офиса и офлайн-магазина:</p>
-          <a>ул. Большая Конюшенная, 19/8, Санкт-Петербург<a>
+          <h3>Шоколадный пломбир и лимонный сорбет</h3>
+          <a href="#">Давайте оба!</a>
+        </div>
+        <div>
+          <h3>Пломбир с помадкой и клубничный щербет</h3>
+          <a href="#">Давайте оба!</a>
+        </div>
+        <ul>
+          <li>
+            <button>Слайд 1</button>
+          </li>
+          <li>
+            <button>Слайд 2</button>
+          </li>
+          <li>
+            <button>Слайд 3</button>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section>
+      <h3>Малинка даром!</h3>
+      <p>
+        При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ
+        банку маринового варенья бесплатно.
+      </p>
+      <a href="#">Хочу варенье!</a>
+    </section>
+    <section>
+      <h3>Шоколадки даром!</h3>
+      <p>
+        При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей
+        шоколадной присыпки совершенно бесплатно.
+      </p>
+      <a href="#">Хочу шоколадки!</a>
+    </section>
+    <section>
+      <h2>Хиты продаж мороженого</h2>
+      <ul>
+        <li>
+          <div>
+            <p>Хит</p>
+            <p>310 &#8381;
+              <span>/кг</span>
+            </p>
+          </div>
+          <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+          <a href="#">Быстрый просмотр</a>
+        </li>
+        <li>
+          <div>
+            <p>Хит</p>
+            <p>380 &#8381;
+              <span>/кг</span>
+            </p>
+          </div>
+          <h3>Сливочно-кофейное с кусочками шоколада</h3>
+          <a href="#">Быстрый просмотр</a>
+        </li>
+        <li>
+          <div>
+            <p>Хит</p>
+            <p>355 &#8381;
+              <span>/кг</span>
+            </p>
+          </div>
+          <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+          <a href="#">Быстрый просмотр</a>
+        </li>
+        <li>
+          <div>
+            <p>Хит</p>
+            <p>415 &#8381;
+              <span>/кг</span>
+            </p>
+          </div>
+          <h3>Сливочное крем-брюле с карамельной подливкой</h3>
+          <a href="#">Быстрый просмотр</a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2 id="company">
+        Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого
+        собственного проиводства на развес
+      </h2>
+      <ul>
+        <li>
+          Все наше мороженое изготавливается на собственном производстве, с
+          использованием современного оборудования и проверенных временем
+          технологий.
+        </li>
+        <li>
+          Закупка ингредиентов производится только у проверенных фермерских
+          хозяйств и компаний, с которыми нас связывает долговременное
+          сотрудничество.
+        </li>
+        <li>
+          Для приготовления мороженого используются настоящие сливки и молоко
+          высочайшего качества. Все дополнительные ингредиенты и добавки
+          произведены из натурального, экологически чистого сырья.
+        </li>
+        <li>
+          Доставка нашего мороженного до заказчиков осуществляется в
+          специальном термопаке, который не дает мороженому растаять в пути и
+          позволяет сохранить превосходный вкус.
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Реклама</h2>
+      <article>
+        <p>Новое в нашем блоге</p>
+        <h3>10 способов сервировки фруктовых щербетов к столу</h3>
+      </article>
+    </section>
+    <section>
+      <h2 class="visually-hidden">Подписка</h2>
+      <p>
+        Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего
+        самого вкусного, что у нас происходит. Обещаем не спамить и не слать
+        всякой ненужной ерунды. Честно =)
+      </p>
+      <form action="">
+        <input type="email" placeholder="email@example.com">
+        <button type="submit">Отправить</button>
+      </form>
+    </section>
+    <section>
+      <h2 class="visually-hidden">Где мы находимся?</h2>
+      <img src="https://via.placeholder.com/150x100" alt="Месторасположение магазина мороженного" width=" " height="">
+      <div>
+        <h2 class="visually-hidden">Форма обратной связи</h2>
+        <p>Адрес главного офиса и офлайн-магазина:</p>
+        <a>ул. Большая Конюшенная, 19/8, Санкт-Петербург
+          <a>
             <p>Для заказов по телефону:</p>
             <a href="tel:88124502525">8 812 450-25-25</a>
             <p>(с 10 до 20 ежедневно)</p>
             <a href="#">Форма обратной связи</a>
-          </div>
-      </section>
-    </main>
-    <footer>
-      <section>
-        <h2>Социальные сети</h2>
-        <ul>
-          <li><a href="">Facebook</a></li>
-          <li><a href="">VK</a></li>
-          <li><a href="">Instagram</a></li>
-          <li><a href="">Twitter</a></li>
-        </ul>
-      </section>
-      <section>
-        <h2>Документация</h2>
-        <ul>
-          <li><a href="">Для поставщиков</a></li>
-          <li><a href="">Наши документы</a></li>
-          <li><a href="">О производстве</a></li>
-          <li><a href="">Экологические стандарты</a></li>
-        </ul>
-      </section>
-      <article>
-        <h2>Разработчик</h2>
-        <a href="">
-          <img
-            src="img/footer/logo-academy.svg"
-            alt="Логотип HTML Academy"
-            width="108"
-            height="39"
-          />
-        </a>
-        <p>
-          Сделано в
-          <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
-          © 2019
-        </p>
-      </article>
-    </footer>
-  </body>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <section>
+      <h2 class="visually-hidden">Социальные сети</h2>
+      <ul>
+        <li>
+          <a href="#">Facebook</a>
+        </li>
+        <li>
+          <a href="#">VK</a>
+        </li>
+        <li>
+          <a href="#">Instagram</a>
+        </li>
+        <li>
+          <a href="#">Twitter</a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2 class="visually-hidden">Документация</h2>
+      <ul>
+        <li>
+          <a href="#">Для поставщиков</a>
+        </li>
+        <li>
+          <a href="#">Наши документы</a>
+        </li>
+        <li>
+          <a href="#">О производстве</a>
+        </li>
+        <li>
+          <a href="#">Экологические стандарты</a>
+        </li>
+      </ul>
+    </section>
+    <article>
+      <h2 class="visually-hidden">Разработчик</h2>
+      <a href="">
+        <img src="img/footer/logo-academy.svg" alt="Логотип HTML Academy" width="108" height="39">
+      </a>
+      <p>
+        Сделано в
+        <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+        © 2019
+      </p>
+    </article>
+  </footer>
+  <form action="https://echo.htmlacademy.ru/courses" method="post">
+    <h3>Мы обязательно вам ответим!</h3>
+    <label for="name"></label>
+    <input type="text" name="name" id="name" placeholder="Имя Фамилия">
+    <label for="email"></label>
+    <input type="email" id="email" name="email" placeholder="email@example.com">
+    <label for="text"></label>
+    <textarea id="text" name="text" rows="7" placeholder="В свободной форме"></textarea>
+    <button type="submit">Отправить</button>
+  </form>
+</body>
+
 </html>
